--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/luckiest-guy": "^0.2.2",
     "@expo-google-fonts/varela-round": "^0.2.2",
+    "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
@@ -19,7 +20,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-navigation-stack": "^2.10.4",
     "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
