--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-navigation-stack": "^2.10.4",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "react-native-reanimated": "~2.8.0",
+    "expo-linear-gradient": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
